tests/errors/cpp/expand/paste-string-id-1.h
#define m(l, r) #l ## r
m(a, b)
